--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div class="contact">
 					<h2>Contact </h2> 
 					<address>
-						Twitter :<a href="https://twitter.com/AmitSunuwar7"> @amitsunuwar</a><br>
+						Twitter :<a href="https://twitter.com/AmitSunuwar7"> @amitsunuwar7</a><br>
 						dribble :<a href="https://dribble.com/AmitSunuwar7"> amitsunuwar</a><br> 
 						Insagram :<a href="https://instagram.com/AmitSunuwar7"> amitsunuwar</a><br>
 						Email :<a href="mailto:detectivenos4a2@gmail.com"> detectivenos4a2@gmail.com</a><br> 
